ver1.0.1 host_permissionsは不要なので削除

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version": 3,
     "name": "ゆっぷるウォッチ",
     "description": "ユーチューブのチャンネルや動画の情報取得を簡単に行う。",
-    "version": "1.0.0",
+    "version": "1.0.1",
     "homepage_url": "https://github.com/ma2442/yupple_watch",
 
     "action": {
@@ -13,6 +13,5 @@
         "48": "icons/yupple_watch_48.png"
     },
     "options_page": "options.html",
-    "permissions": ["activeTab", "storage"],
-    "host_permissions": ["*://*.youtube.com/*"]
+    "permissions": ["activeTab", "storage"]
 }
